# esp32CountdownClock

./: .cproject  .project  sdkconfig
main/: CMakeLists.txt  Countdown.c  Countdown.cpp  Countdown.h  Kconfig.projbuild  MatrixChars.cpp  MatrixChars.h  MatrixDisplay.c  MatrixDisplay.cpp  MatrixDisplay.h  Types.h  Wifi.c  Wifi.h  main.c  main.cpp  phy.c  spiInit.c  spiInit.h
main/PHY/: phy.h
main/PHY/src/: phy.c
main/application/src/: main.c
main/drivers/src/: MatrixDisplay.h
main/modules/MatrixChars/src/: MatrixChars.c
